# nh

./: .dir-locals.el  .gitignore  .travis.yml  Imports.hs  Main.hs  Makefile  README.org  TODO.org  default.nix  nh  nh.cabal  nh.org  out  port.org  shell.nix  suite.sh
src/NH/: Config.hs  Derivation.hs  Emission.hs  FS.hs  Github.hs  Logic.hs  MRecord.hs  Meta.hs  Misc.hs  Nix.hs  PKGDB.hs  Projection.hs  Types.hs
tests/: packages.nix
