name:                nh
version:             0.0.1
synopsis:            Nix/Haskell tooling
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     NH.Config
                     , NH.FS
                     , NH.Github
                     , NH.Misc
                     , NH.PKGDB
                     , NH.Projection
                     , NH.Types

  build-depends:       base
                     , aeson
                     , ansi-wl-pprint
                     , base-unicode-symbols
                     , Cabal
                     , cabal2nix
                     , containers
                     , data-default-class
                     , directory
                     , distribution-nixpkgs
                     , filepath
                     , hnix
                     , hourglass
                     , language-nix
                     , lens
                     , optparse-applicative
                     , parsers
                     , pretty
                     , req
                     , semigroups
                     , temporary
                     , text
                     , text-format
                     , trifecta

executable nha
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , aeson
                     , ansi-wl-pprint
                     , base-unicode-symbols
                     , Cabal
                     , cabal2nix
                     , containers
                     , data-default-class
                     , distribution-nixpkgs
                     , hnix
                     , hourglass
                     , language-nix
                     , lens
                     , nh
                     , optparse-applicative
                     , pretty
                     , req
                     , temporary
                     , text
                     , text-format
