name:                nh
version:             0.0.1
synopsis:            Nix/Haskell tooling
license:             AGPL-3
license-file:        LICENSE
author:              Kosyrev Serge
maintainer:          kosyrev.serge@protonmail.com
category:            Database
build-type:          Simple

extra-source-files:  README.org
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010

  exposed-modules:     NH.Config
                     , NH.Derivation
                     , NH.Emission
                     , NH.FS
                     , NH.Github
                     , NH.Logic
                     , NH.Misc
                     , NH.Nix
                     , NH.PKGDB
                     , NH.Types

  build-depends:       base
                     , basement
                     , foundation
                     , foundation-edge

                     , aeson
                     , ansi-wl-pprint
                     , base-unicode-symbols
                     , Cabal
                     , cabal2nix
                     , containers
                     , control-bool
                     , data-default-class
                     , data-fix
                     , directory
                     , distribution-nixpkgs
                     , filepath
                     , github
                     , generics-sop
                     , hashable
                     , hnix
                     , hourglass
                     , language-nix
                     , lens
                     , monadplus
                     , optparse-applicative
                     , parsers
                     , pretty
                     , protolude
                     , protolude
                     , req
                     , semigroups
                     , temporary
                     , text
                     , text-format
                     , trifecta
                     , turtle
                     , unordered-containers

executable nha
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , basement
                     , foundation
                     , foundation-edge

                     , aeson
                     , ansi-wl-pprint
                     , base-unicode-symbols
                     , Cabal
                     , cabal2nix
                     , containers
                     , control-bool
                     , data-default-class
                     , distribution-nixpkgs
                     , generics-sop
                     , github
                     , hashable
                     , hnix
                     , hourglass
                     , language-nix
                     , lens
                     , monadplus
                     , nh
                     , optparse-applicative
                     , pretty
                     , protolude
                     , req
                     , temporary
                     , text
                     , text-format
                     , turtle
                     , unordered-containers
